sfdx-spa-alcala/force-app/main/default/objects/Student_Transaction__c/Student_Transaction__c.object-meta.xml
<CustomObject>
    <label>Student Transaction</label>
    <nameField>
        <displayFormat>T - {000000}</displayFormat>
        <label>Student Transactions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>