sfdx-spa-alcala/force-app/main/default/objects/Student_Transaction__c/fields/ESC_Status__c.field-meta.xml
<CustomField>
    <fullName>ESC_Status__c</fullName>
    <label>ESC Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ESC</fullName>
            </value>
            <value>
                <fullName>ESC/FREE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>