sfdx-spa-alcala/force-app/main/default/objects/Student_Transaction__c/fields/Payment_Number__c.field-meta.xml
<CustomField>
    <fullName>Payment_Number__c</fullName>
    <displayFormat>PN-{0000000}</displayFormat>
    <label>Payment Number</label>
    <type>AutoNumber</type>
</CustomField>