sfdx-spa-alcala/force-app/main/default/objects/Student_Transaction__c/fields/Payment_Received__c.field-meta.xml
<CustomField>
    <fullName>Payment_Received__c</fullName>
    <label>Payment Received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>Full Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>