sfdx-spa-alcala/force-app/main/default/objects/Student_Transaction__c/fields/Student_Year_Semester__c.field-meta.xml
<CustomField>
    <fullName>Student_Year_Semester__c</fullName>
    <label>Student Year/Semester</label>
    <referenceTo>Student_Year_Semester__c</referenceTo>
    <relationshipLabel>Student Transactions</relationshipLabel>
    <relationshipName>Student_Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>