sfdx-spa-alcala/force-app/main/default/objects/Student_Transaction__c/fields/Total_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Fee__c</fullName>
    <formula>IF(Student_Year_Semester__r.RecordType.Name == &#39;Junior Highschool&#39;,Student_Year_Semester__r.Total_Fee__c / 2,Student_Year_Semester__r.Total_Fee__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>